# temporizador-atividade-02-

./: CMakeLists.txt  README.md  c,main  codigo.fonte  gitignore  led-button-timer-rpi-pico
.VSCode/: launch.json  settings.json
